--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,9 @@ services:
     ports:
       - "5432:5432"
     environment:
-      - POSTGRES_DB=cosw
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=1234di
+      POSTGRES_DB : cosw
+      POSTGRES_USER : postgres
+      POSTGRES_PASSWORD : ${POSTGRES_ROOT_PASSWORD}
   app:
     container_name: spring-application
     image: openjdk:17-jdk
@@ -19,11 +19,9 @@ services:
     ports:
       - "5000:8080"
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://postdb:5432/cosw
-      - SPRING_DATASOURCE_USERNAME=postgres
-      - SPRING_DATASOURCE_PASSWORD=1234
-      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
+      SPRING_DATASOURCE_URL : jdbc:postgresql://postdb:5432/cosw
+      SPRING_DATASOURCE_USERNAME : postgres
+      SPRING_DATASOURCE_PASSWORD : ${POSTGRES_ROOT_PASSWORD}
+      SPRING_JPA_HIBERNATE_DDL_AUTO : update
     depends_on:
-      - postdb
-    links:
       - postdb
