--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       POSTGRES_DB : cosw
       POSTGRES_USER : postgres
       POSTGRES_PASSWORD : ${POSTGRES_ROOT_PASSWORD}
+      POSTGRES_HOST_AUTH_METHOD : "trust"
   app:
     container_name: spring-application
     image: openjdk:17-jdk
