--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     restart: always
     ports:
       - "5432:5432"
+    expose:
+      - "5432"
     environment:
       POSTGRES_DB : cosw
       POSTGRES_USER : postgres
