--- a/swServer/Dockerfile
+++ b/swServer/Dockerfile
@@ -3,7 +3,7 @@ VOLUME /tmp
 ARG JAR_FILE=./swServer/build/libs/*.jar
 EXPOSE 8080
 COPY ${JAR_FILE} app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+ENTRYPOINT ["java","-jar", "-Duser.timezone=Asia/Seoul" ,"/app.jar"]
 
 #
 #FROM openjdk:17-jdk AS builder
