--- a/swServer/src/main/resources/application.yml
+++ b/swServer/src/main/resources/application.yml
@@ -7,3 +7,6 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     open-in-view: false
     generate-ddl: true
+logging:
+  level:
+    root: info
