--- a/swServer/build.gradle
+++ b/swServer/build.gradle
@@ -29,6 +29,10 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10'
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
     implementation 'io.springfox:springfox-swagger-ui:3.0.0'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.13.4'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.4'
+
+
 
 }
 
