--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,8 @@ services:
     container_name: spring-application
     image: openjdk:17-jdk
     build:
-      context: .
-      dockerfile: ./swServer/Dockerfile
+      context: ./swServer
+      dockerfile: ./Dockerfile
     ports:
       - "1200:8080"
     environment:
