--- a/swServer/build.gradle
+++ b/swServer/build.gradle
@@ -31,8 +31,8 @@ dependencies {
     implementation 'io.springfox:springfox-swagger-ui:3.0.0'
     implementation 'com.fasterxml.jackson.core:jackson-core:2.13.4'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.4'
-
-
+    implementation 'org.jetbrains:annotations:23.0.0'
+    implementation group: 'com.flipkart.zjsonpatch', name: 'zjsonpatch', version: '0.4.12'
 
 }
 
